--- a/configure.in
+++ b/configure.in
@@ -615,27 +615,6 @@ if test "$PHP_CONFIG_FILE_SCAN_DIR" = "DEFAULT"; then
 	PHP_CONFIG_FILE_SCAN_DIR=""
 fi
 
-# compatibility
-if test -z "$with_pear" && test "$enable_pear" = "no"; then
-  with_pear=no
-fi
-
-PHP_ARG_WITH(pear, [whether to install PEAR, and where],
-[  --with-pear=DIR         Install PEAR in DIR (default PREFIX/lib/php)
-  --without-pear          Do not install PEAR], DEFAULT, yes)
-
-if test "$PHP_PEAR" != "no" && test "$PHP_SAPI_CLI" != "no"; then
-  install_pear="install-pear"
-  PEAR_INSTALLDIR=$PHP_PEAR
-fi
-
-if test "$PHP_PEAR" = "DEFAULT" || test "$PHP_PEAR" = "yes"; then
-  case $PHP_LAYOUT in
-    GNU) PEAR_INSTALLDIR=$datadir/pear;;
-    *)   PEAR_INSTALLDIR=$libdir/php;;
-  esac
-fi
-
 test -n "$DEBUG_CFLAGS" && CFLAGS="$CFLAGS $DEBUG_CFLAGS"
 
 PHP_ARG_ENABLE(safe-mode, whether to enable safe mode by default,
@@ -733,6 +712,20 @@ if test "$PHP_IPV6" != "no" && test "$ac_cv_ipv6_support" = yes; then
   AC_DEFINE(HAVE_IPV6,1,[Whether to enable IPv6 support])
 fi
 
+AC_MSG_CHECKING([whether to enable versioning])
+AC_ARG_ENABLE(versioning,
+[  --enable-versioning     Export only required symbols.
+                          See INSTALL for more information], [
+  if test "x$APXS" != "x"; then
+    PHP_VERSIONING=$enableval
+  else
+    PHP_VERSIONING=no
+  fi
+],[
+  PHP_VERSIONING=no
+])
+AC_MSG_RESULT([$PHP_VERSIONING])
+
 divert(5)
 
 dnl ## In diversion 5 we check which extensions should be compiled.
@@ -768,24 +761,8 @@ AC_ARG_ENABLE(all,
 # reading config stubs
 esyscmd(./build/config-stubs ext)
 
-dnl Other settings.
+dnl Extensions post-config
 dnl -------------------------------------------------------------------------
-
-PHP_HELP_SEPARATOR([Other settings:])
-
-AC_MSG_CHECKING([whether to enable versioning])
-AC_ARG_ENABLE(versioning,
-[  --enable-versioning     Export only required symbols.
-                          See INSTALL for more information], [
-  if test "x$APXS" != "x"; then
-    PHP_VERSIONING=$enableval
-  else
-    PHP_VERSIONING=no
-  fi
-],[
-  PHP_VERSIONING=no
-])
-AC_MSG_RESULT([$PHP_VERSIONING])
 
 if test "$PHP_VERSIONING" = "yes"; then
   test -z "$PHP_SYM_FILE" && PHP_SYM_FILE="$abs_srcdir/sapi/$PHP_SAPI/php.sym"
@@ -812,8 +789,6 @@ shared)
 ;;
 esac
 
-PHP_REGEX
-
 EXTRA_LIBS="$EXTRA_LIBS $DLIBS $LIBS"
 
 dnl this has to be here to prevent the openssl crypt() from
@@ -823,6 +798,64 @@ if test "$ac_cv_lib_crypt_crypt" = "yes"; then
 fi
 
 unset LIBS LDFLAGS
+
+dnl PEAR
+dnl -------------------------------------------------------------------------
+
+PHP_HELP_SEPARATOR([PEAR:])
+PHP_CONFIGURE_PART(Configuring PEAR)
+
+# compatibility
+if test -z "$with_pear" && test "$enable_pear" = "no"; then
+  with_pear=no
+fi
+
+PHP_ARG_WITH(pear, [whether to install PEAR],
+[  --with-pear=DIR         Install PEAR in DIR (default PREFIX/lib/php)
+  --without-pear          Do not install PEAR], DEFAULT, yes)
+
+if test "$PHP_PEAR" != "no"; then
+
+  dnl
+  dnl PEAR dependancies
+  dnl
+  if test "$PHP_SAPI_CLI" = "no"; then
+    pear_error_msg="$pear_error_msg 
+                    PEAR requires CLI to be enabled.     Add --enable-cli to the configure line."
+  fi
+  if test "$PHP_PCRE_REGEX" = "no"; then
+    pear_error_msg="$pear_error_msg 
+                    PEAR requires PCRE to be enabled.    Add --with-pcre-regex to the configure line."
+  fi
+  if test "$PHP_XML" = "no"; then
+    pear_error_msg="$pear_error_msg 
+                    PEAR requires XML to be enabled.     Add --enable-xml to the configure line."
+  fi
+
+dnl
+dnl ext/xmlrpc is not really there yet to be a requirement..
+dnl
+dnl  if test "$PHP_XMLRPC" = "no"; then
+dnl    pear_error_msg="$pear_error_msg 
+dnl                    PEAR requires XML-RPC to be enabled. Add --with-xmlrpc to the configure line."
+dnl fi
+dnl
+
+  if test "$pear_error_msg"; then
+    AC_MSG_ERROR([$pear_error_msg])
+  fi
+
+  install_pear="install-pear"
+  PEAR_INSTALLDIR=$PHP_PEAR
+
+  if test "$PHP_PEAR" = "DEFAULT" || test "$PHP_PEAR" = "yes"; then
+    case $PHP_LAYOUT in
+      GNU) PEAR_INSTALLDIR=$datadir/pear;;
+      *)   PEAR_INSTALLDIR=$libdir/php;;
+    esac
+  fi
+fi
+
 
 dnl Configuring Zend and TSRM.
 dnl -------------------------------------------------------------------------
