--- a/ext/interbase/interbase.rc
+++ b/ext/interbase/interbase.rc
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id$ */
+/* $Id: interbase.rc,v 1.1 2003/09/07 19:59:55 abies Exp $ */
 
 #ifdef APSTUDIO_INVOKED
 #error This file cannot be opened from the Visual Studio IDE
@@ -44,22 +44,26 @@
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION PHP_MAJOR_VERSION,PHP_MINOR_VERSION,PHP_RELEASE_VERSION,0
  PRODUCTVERSION PHP_MAJOR_VERSION,PHP_MINOR_VERSION,PHP_RELEASE_VERSION,0
+#ifndef _DEBUG
+ FILEFLAGS 0x0L
+#else
+ FILEFLAGS 0x1L
+#endif
  FILEFLAGSMASK 0x3fL
- FILEOS 0x40004L
- FILETYPE 0x2L
- FILESUBTYPE 0x0L
+ FILEOS VOS__WINDOWS32
+ FILETYPE VFT_DLL
+ FILESUBTYPE VFT2_UNKNOWN
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
         BLOCK "000004b0"
         BEGIN
-            VALUE "FileDescription", "PHP Interbase module"
-            VALUE "FileVersion", PHP_VERSION
-            VALUE "File Revision", FILE_REVISION
-            VALUE "LegalCopyright", "1997-2003 The PHP Group"
-            VALUE "ProductName", "PHP"
-            VALUE "ProductVersion", PHP_VERSION
-			VALUE "Build Type", BUILD_TYPE
+            VALUE "FileDescription", "PHP Interbase module\0"
+            VALUE "FileVersion", PHP_VERSION "\0"
+            VALUE "File Revision", FILE_REVISION "\0"
+            VALUE "LegalCopyright", "Copyright © 2003 The PHP Group\0"
+			VALUE "Build Type", BUILD_TYPE "\0"
+			VALUE "URL", "http://www.php.net\0"
         END
     END
     BLOCK "VarFileInfo"
