--- a/ext/interbase/interbase.rc
+++ b/ext/interbase/interbase.rc
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: interbase.rc,v 1.2 2003/09/07 20:35:09 abies Exp $ */
+/* $Id: interbase.rc,v 1.3 2003/09/08 00:32:22 abies Exp $ */
 
 #ifdef APSTUDIO_INVOKED
 #error This file cannot be opened from the Visual Studio IDE
@@ -36,9 +36,14 @@
 # define BUILD_TYPE "Release"
 #endif
 
-#define VERSION_INFO_ONLY
-#define PHP_H
+#include <ibase.h>
 #include "interbase.c"
+
+#ifdef FB_SQLDA
+#define CLIENT_LIB "fbclient.dll"
+#else
+#define CLIENT_LIB "gds32.dll"
+#endif
 
 #ifndef _MAC
 
@@ -64,6 +69,7 @@ BEGIN
             VALUE "File Revision", FILE_REVISION "\0"
             VALUE "LegalCopyright", "Copyright © 2003 The PHP Group\0"
 			VALUE "Build Type", BUILD_TYPE "\0"
+            VALUE "Client Library", CLIENT_LIB "\0"
 			VALUE "URL", "http://www.php.net\0"
         END
     END
